infra/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox
  labels:
    app: hivebox
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hivebox
  template:
    metadata:
      labels:
        app: hivebox
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: hivebox
          image: hivebox:v0.1.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /readyz
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /version
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
              ephemeral-storage: "256Mi"
      volumes:
        - name: tmp
          emptyDir: {}
